# sql-compare

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  JULES.md  LLM-INSTRUCTIONS.md  PR_DESCRIPTION.md  README.md  SIGNING.md  all_files.txt  baseline_result.txt  benchmark.py  benchmark2.py  benchmark_perf.py  benchmark_re.py  benchmark_repro.py  check_duplication.py  check_yaml.py  clean_scanner.py  cleanup_redundant_prs.sh  code_review_diff.sh  commit_msg.txt  debug_behavior.py  debug_core.py  debug_issue.py  explore_parsing.py  explore_parsing_fixed.py  fix_all.py  fix_all2.py  fix_all3.py  fix_all4.py  fix_all5.py  fix_m_end.py  fix_regex.py  fix_scanner.py  fix_syntax.py  fix_tokenize.py  fix_tokenize_2.py  optimized_result.txt  (+74 more)
.Jules/: palette.md
.claude/hooks/: session-start.sh
.gemini/: styleguide.md
.github/: CODEOWNERS  WORKFLOWS.md  copilot-instructions.md  copilot-setup-steps.yaml  copilot-setup-steps.yml
.github/actions/: review-utils.js  review-utils.test.js
.jules/: bolt.md  palette.md  sentinel.md
docs/: USAGE.md
tests/: test_auto_assign_reviewers_workflow.py  test_canonicalize_where_and.py  test_codex_workflow.py  test_core.py  test_diff_logic.py  test_gui.py  test_gui_empty_state.py  test_gui_init.py  test_integration.py  test_parse_from_clause_body.py  test_patch_file.py  test_patch_vulnerability.py  test_safe_read_file.py  test_security.py  test_sentinel_dos.py  test_sql_compare.py  test_top_level_find_kw.py  test_utils.js  test_web.py  test_workflow_parsing.py  test_workflow_security.py  test_workflows.py
(+48 files in other folders)
