[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-compare"
version = "0.1.0"
description = "A tool to compare two SQL statements with CLI, GUI, and Web interfaces."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Actual Name", email = "your.actual.email@example.com"}
]
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sql-compare = "sql_compare.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
